--- a/ModesApiExternalApp/release/ModesApiExternalApp.exe.config
+++ b/ModesApiExternalApp/release/ModesApiExternalApp.exe.config
@@ -1,30 +1,32 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a" />
   </configSections>
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="bin"/>
+      <probing privatePath="bin" />
+    </assemblyBinding>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SqlServerCe" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.1.0" newVersion="3.5.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\ApiExt.log"/>
-      <param name="AppendToFile" value="true"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="5MB"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <param name="File" value="Logs\ApiExt.log" />
+      <param name="AppendToFile" value="true" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d  %-5p %m%n"/>
+        <param name="ConversionPattern" value="%d  %-5p %m%n" />
       </layout>
-
     </appender>
-
     <logger name="LOGGER">
-      <appender-ref ref="LogFileAppender"/>
+      <appender-ref ref="LogFileAppender" />
     </logger>
-  </log4net>  
+  </log4net>
 </configuration>
