--- a/ModesUPPIsubSalesMVC4/bin/ModesUPPIsubSalesMVC4.dll.config
+++ b/ModesUPPIsubSalesMVC4/bin/ModesUPPIsubSalesMVC4.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=null" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
