--- a/ModesUPPIsubSalesMVC4/Web.config
+++ b/ModesUPPIsubSalesMVC4/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=null" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -11,6 +14,21 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Logs\Example.log" />
+      <param name="AppendToFile" value="true" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d  %-5p %m%n" />
+      </layout>
+    </appender>
+    <logger name="LOGGER">
+      <appender-ref ref="LogFileAppender" />
+    </logger>
+  </log4net>
   <system.web>
     <compilation targetFramework="4.0" />
     <pages>
