--- a/ModesUPPIsubSalesMVC4/Web.config
+++ b/ModesUPPIsubSalesMVC4/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="Logs\Example.log" />
+      <param name="File" value="Logs\ModesUPPIsubSalesMVC4.log" />
       <param name="AppendToFile" value="true" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="5MB" />
